overflow-x fixed

--- a/styles/findUs.css
+++ b/styles/findUs.css
@@ -12,6 +12,7 @@
 }
 body {
   font-size: 16px;
+  overflow-x: hidden;
 }
 li {
   list-style-type: none;
