--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,9 @@
 }
 body {
   font-size: 16px;
+  width: 90%;
+  margin: auto;
+  overflow-x: hidden;
 }
 li {
   list-style-type: none;
